[workspace]
# In alphabetical order
members = [
    "arrow_util",
    "client_util",
    "data_types",
    "datafusion_util",
    "generated_types",
    "influxdb_iox_client",
    "influxdb_line_protocol",
]
default-members = ["influxdb_iox_client"]

resolver = "2"

exclude = [
    "*.md",
    "*.txt",
    ".circleci/",
    ".editorconfig",
    ".git*",
    ".github/",
    ".kodiak.toml",
    "Dockerfile*",
    "LICENSE*",
    "buf.yaml",
    "docker/",
    "docs/",
    "massif.out.*",
    "perf/",
    "scripts/",
    "test_bench/",
    "test_fixtures/",
    "tools/",
]

[workspace.package]
version = "0.1.0"
authors = ["IOx Project Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arrow = { version = "34.0.0" }
arrow-flight = { version = "34.0.0" }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev="ea3b965dd4861f966a5ec1c4a65f748f0e5dcc12", default-features = false }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion.git", rev="ea3b965dd4861f966a5ec1c4a65f748f0e5dcc12" }
hashbrown = { version = "0.13.2" }
parquet = { version = "34.0.0" }

# This profile optimizes for runtime performance and small binary size at the expense of longer
# build times. It's most suitable for final release builds.
[profile.release]
codegen-units = 16
debug = true
lto = "thin"

[profile.bench]
debug = true

# This profile optimizes for short build times at the expense of larger binary size and slower
# runtime performance. It's most suitable for development iterations.
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

# Per insta docs: https://insta.rs/docs/quickstart/#optional-faster-runs
#[profile.dev.package.insta]
#opt-level = 3

#[profile.dev.package.similar]
#opt-level = 3
